<resources>
    <string name="app_name">Warwick Student Cinema</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="refreshimage">refreshImage</string>
    <string name="android_studio_android_com">android.studio@android.com</string>
    <string name="android_studio">Android Studio</string>
    <string name="userimage">userImage</string>
    <string name="title_activity_schedule">Schedule</string>
    <string name="general_info">Warwick Student Cinema (WSC/Warwick Filmsoc) is a nationally acclaimed, student run, professional standard cinema. Using industry standard 35mm and digital equipment, we provide a genuine cinematic experience to the staff and students of the University of Warwick. As one of the largest and most well-known society on campus, we are active nearly every night of term!</string>
    <string name="title_activity_about_film">AboutFilm</string>
    <string name="image_of_film">Image of Film</string>
    <string name="title_activity_about_us">AboutUsActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="cinema_for_all_logo">Cinema For All logo</string>
    <string name="warwick_su_logo">Warwick SU logo</string>
    <string name="nextfilm">NextFilm</string>
    <string name="schedule_noShow">There are currently no films in our schedule.\n\nCheck back later to see what films we are putting next!</string>
    <string name="faq_who_title">Who are Warwick Student Cinema?</string>
    <string name="faq_who_text">WSC is the largest society on campus and is a cinema run by students, for the members and guests of Warwick University. We show a wide variety of films from Hollywood blockbusters a few months after their initial release, to the more obscure artistic films that didn\'t get the cinema release they deserved, and the classics that you want to see again.</string>
    <string name="faq_where_title">Where do you show films?</string>
    <string name="faq_where_text">Films are screened in Lecture Theatre 3 on the Science Concourse. This is situated over the bridge from the library</string>
    <string name="faq_howMany_title">How often do you show films?</string>
    <string name="faq_howMany_text">There are screenings on five or six nights each week with two shows on some nights. For more information, please go to the menu and select \"Schedule\"</string>
    <string name="faq_whatFilms_title">How do I know what films are to be shown?</string>
    <string name="faq_whatFilms_text">Posters showing all of the films scheduled for a term and booklets featuring reviews of all these films are available free from various pickup points across campus and at the ticket desk before films. The Film Schedule is always available on this website and in the schedule screen in this app.</string>
    <string name="faq_whereBuy_title">Where can I buy a ticket?</string>
    <string name="faq_whereBuy_text">Tickets are available in the science concourse corridor leading up to Lecture Theatre 3 from 20 minutes before the film starts. In order to get a good seat and to allow the show to start promptly please arrive in good time. Tickets are sold on a first come first served basis.</string>
    <string name="faq_howMuch_title">How much does it cost to watch a film?</string>
    <string name="faq_howMuch_text">Ticket prices for standard screenings can be found in the \"Prices\" section in the drop-down menu above. Special event prices such as for The Allnighter are set per event and will be publicised around the event.\n\nTo become a member of the Society costs £3.50 and includes one free standard film.\n\nEvery member of the University may bring one external guest to each screening subject to the Guest ticket price.</string>
    <string name="faq_howMuchMembership_title">How much does it cost to become a society member?</string>
    <string name="faq_howMuchMembership_text">Annual membership costs £3.50, and is valid until the end of the Academic Year during which it is bought. In order to join us, you will need to be a member of the University of Warwick Students\' Union Societies Federation - details of which can be found on our Tickets and Fees page and on the Students\' Union website.\n\nIf you become a society member then you will receive one free ticket to any standard film of your choice, this means that if you are a member of Societies Federation you can pay £3.50 to join the society and see a film and get future discounts!</string>
    <string name="faq_becomeMember_title">How can I become a society member?</string>
    <string name="faq_becomeMember_text">Memberships are available on the door and can be obtained when you purchase your tickets. Memberships can also be purchased online using the Students\' Union website and via the Students\' Union reception located in the Students\' Union North building.</string>
    <string name="faq_memberBenefits_title">What are the benefits of becoming a society member?</string>
    <string name="faq_memberBenefits_text">Joining WSC means far more than just getting yourself into films a lot cheaper! If you are a member you are able to further reduce your film viewing costs by buying a 5 film ticket for £10.00. Becoming a member also means you can get more involved with the running of the society and it enables us to inform you of WSC events and news which may be of interest of you (we promise we will not send unsolicited email and the frequency will be kept to a minimum).\n\nWe also run special promotions for society members, more info on the Tickets and Fees page.</string>
    <string name="faq_multipleTickets_title">Can I buy multiple tickets?</string>
    <string name="faq_multipeTickets_text">Yes. You may buy a 5-film ticket for just £10.00 (Members) or £14 (Non-Members) which will admit you (but not a guest or University member) to any five standard films and is valid for the complete academic year. We do not sell term or annual passes.</string>
    <string name="faq_foodDrink_title">Can I take food and drink into the Cinema?</string>
    <string name="faq_foodDrink_text">The use of L3 is loaned to us by the University and hence as one of the conditions of use we must respect and enforce the usual \"No Food/Drink/Smoking\" rule. This is regardless of the fact that these rules are largely disobeyed during the daytime.</string>
    <string name="faq_dvd_title">So do you show DVD/Blu-Rays?</string>
    <string name="faq_dvd_text">No! We show most of our films in the format used by all major cinemas, and we are also fully equipped with every professional digital cinema sound format available today (Dolby Digital, DTS and SDDS) - meaning if there\'s a digital soundtrack to a film, we\'ll be using it! We also have over 8kW of amplification power so the speech on the soundtrack is crystal-clear while the effects sound as the director intended.\n\nWe also have the ability (and inclination!) to show films in 70mm - a format not generally seen outside of the best cinemas in London\'s West End. Whenever we can, we will screen a film in 70mm for its improved picture and sound quality, and we usually schedule a 70mm showing of older films during each of the Autumn and Spring terms.</string>
    <string name="faq_howCrew_title">How can I help out with Warwick Student Cinema (i.e. become a crew member)?</string>
    <string name="faq_howCrew_text">You can help with stewarding, projecting the films, publicity and the IT teams. For more information email us at info@filmsoc.warwick.ac.uk or arrive early for a regular screening and tell whoever\'s about that you\'d like to become a Crew member. Please have a look at the Getting Involved section on our website.</string>
    <string name="faq_whyCrew_title">Why would I want to help out with Warwick Student Cinema?</string>
    <string name="faq_whyCrew_text">The reason most commonly given is that if you help out a reasonable amount you are entitled to attend all our screenings for free. However, there is more to it than that. Inevitably, in a society as large as ours (nearly 3000 members) the majority of members are in effect merely customers. Becoming a Crew member of WSC is like becoming an ordinary member of the university\'s other societies (except it\'s free) and gives you the opportunity to write reviews, learn how to work a film projector, write something on your C.V. and most importantly have fun along the way.</string>
    <string name="faq_dearWSC_title">Dear Warwick Student Cinema, will you...</string>
    <string name="faq_dearWSC_text">The aims of Warwick Student Cinema are to promote film interest for educational and leisure purposes. We do not provide answers to specific film queries, though discussion may take place on the forums. Warwick Student Cinema will happily help with queries relating to film societies and we do provide advertising opportunities (see the advertising pagefor more details).</string>
    <string name="getInvolved_overall_img1">Collage of people getting involved in the society</string>
    <string name="getInvolved_overall_overall_title">All Warwick Students and Staff are welcome to Get Involved!</string>
    <string name="getInvolved_overall_overall_text">Interested in being more active within WSC? Learning new skills? Meeting new people? Discovering the art of running a cinema? Being part of the biggest society on campus? Or just want free films for you and a guest? There\'s a role for you with us! For more information, you can always email the exec, or speak to a member of crew at any screening.</string>
    <string name="getInvolved_overall_teams_title">Our Teams</string>
    <string name="getInvolved_overall_teams_text">The success of Warwick Student Cinema and the quality of service we are able to provide for our members is entirely down to members of the Crew who volunteer their time to help run every single show, and look after the day to day running of the society. Without the tremendous dedication of these people, the society would not be able to function! WSC is always looking for new people who are willing to offer their help and get involved with the society. We divide into 5 teams which you can get involved with:\n\t\tFront of House\n\t\tProjection\n\t\tPublicity\n\t\tMarketing\n\t\tIT\n\nEach of these teams has different roles available, plus the head of the team sits on the Exec. Of course, getting involved in one area of the society need not limit you to that role - you can volunteer in several different aspects of the society if you wish, so long as you can find the time!</string>
    <string name="getInvolved_overall_freeFilms_title">Free Films, you say?</string>
    <string name="getInvolved_overall_freeFilms_text">As an active crew member of the society you and one guest can attend any standard screening for FREE!\n\nThe skills you obtain by being involved with the largest society on campus also look impressive to potential future employers, and help you to answer no end of interview questions. Plus, WSC tries to maintain an interesting and active social life including holding our own special events, going to see films, bowling, meals, laser quest, the pub, parties, BBQs and much more, new suggestions are always welcomed!</string>
    <string name="getInvolved_overall_img2">End of year social</string>
    <string name="getInvolved_overall_img2_text">End of Year Trip to Warwick Castle</string>
</resources>